--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "~1.3.5",
     "ejs": "~2.3.3",
     "morgan": "~1.6.1",
+    "log4js": "~0.6.32",
     "serve-favicon": "~2.3.0"
   },
   "keywords":[
