--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.1",
   "description":"config a standard react development envrioment",
   "scripts":{
-    "devServer":"ENV=development node app.js",
-    "buildServer":"ENV=production node app.js",
-    "dev":"node server.js",
-    "build":"webpack"
+    "devServer":"NODE_ENV=development node app.js",
+    "buildServer":"NODE_ENV=production node app.js",
+    "build":"webpack --config webpack.config.js"
   },
   "author":"fyddaben",
   "license":"MIT",
@@ -17,6 +16,22 @@
     "ejs": "~2.3.3",
     "morgan": "~1.6.1",
     "log4js": "~0.6.32",
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-react": "^6.0.0",
+    "babel-preset-stage-2": "^6.0.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-hot-loader": "1.3.0",
+    "css-loader":"0.23.1",
+    "sass-loader":"3.1.2",
+    "url-loader":"0.5.7",
+    "node-sass":"3.4.2",
+    "extract-text-webpack-plugin":"1.0.1",
+    "style-loader":"0.13.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "1.14.1",
     "serve-favicon": "~2.3.0"
   },
   "keywords":[
