--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "style-loader":"0.13.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "1.14.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "http-proxy": "1.13.2"
   },
   "keywords":[
     "react",
