--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description":"config a standard react development envrioment",
   "scripts":{
     "devServer":"NODE_ENV=development node app.js",
-    "buildServer":"NODE_ENV=production node app.js",
-    "build":"webpack --config webpack.config.js"
+    "server":"NODE_ENV=production node app.js",
+    "build":"NODE_ENV=production webpack"
   },
   "author":"fyddaben",
   "license":"MIT",
@@ -23,7 +23,6 @@
     "babel-preset-stage-2": "^6.0.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-hot-loader": "1.3.0",
     "css-loader":"0.23.1",
     "sass-loader":"3.1.2",
     "url-loader":"0.5.7",
@@ -31,9 +30,13 @@
     "extract-text-webpack-plugin":"1.0.1",
     "style-loader":"0.13.0",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "1.14.1",
     "serve-favicon": "~2.3.0",
-    "http-proxy": "1.13.2"
+    "glob": "7.0.0"
+  },
+  "devDependencies":{
+    "react-hot-loader": "1.3.0",
+    "http-proxy": "1.13.2",
+    "webpack-dev-server": "1.14.1"
   },
   "keywords":[
     "react",
