--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "description":"config a standard react development envrioment",
   "scripts":{
-    "devServer":"NODE_ENV=development node app.js",
-    "server":"NODE_ENV=production node app.js",
+    "devServer":"pm2 start ecosystem.json",
+    "server":"pm2 start ecosystem.json --env production",
+    "logs":"pm2 logs benApp",
     "build":"NODE_ENV=production webpack"
   },
   "author":"fyddaben",
@@ -31,12 +32,16 @@
     "style-loader":"0.13.0",
     "webpack": "^1.12.2",
     "serve-favicon": "~2.3.0",
+    "pm2":"1.0.1",
     "glob": "7.0.0"
   },
   "devDependencies":{
     "react-hot-loader": "1.3.0",
     "http-proxy": "1.13.2",
     "webpack-dev-server": "1.14.1"
+  },
+  "bin":{
+    "pm2":"./node_modules/pm2/bin/pm2"
   },
   "keywords":[
     "react",
