--- a/package.json
+++ b/package.json
@@ -1,49 +1,50 @@
 {
   "name": "ReactDevelopmemnt",
   "version": "0.0.1",
-  "description":"config a standard react development envrioment",
-  "scripts":{
-    "devServer":"pm2 start ecosystem.json",
-    "server":"pm2 start ecosystem.json --env production",
-    "logs":"pm2 logs benApp",
-    "build":"NODE_ENV=production webpack"
+  "description": "config a standard react development envrioment",
+  "scripts": {
+    "devServer": "pm2 start ecosystem.json",
+    "server": "pm2 start ecosystem.json --env production",
+    "logs": "pm2 logs benApp",
+    "build": "NODE_ENV=production webpack"
   },
-  "author":"fyddaben",
-  "license":"MIT",
-  "dependencies":{
-    "express":"4.13.4",
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "ejs": "~2.3.3",
-    "morgan": "~1.6.1",
-    "log4js": "~0.6.32",
+  "author": "fyddaben",
+  "license": "MIT",
+  "dependencies": {
+    "assets-webpack-plugin": "^3.3.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-react": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "css-loader": "0.23.1",
+    "ejs": "~2.3.3",
+    "express": "4.13.4",
+    "extract-text-webpack-plugin": "1.0.1",
+    "glob": "7.0.0",
+    "log4js": "~0.6.32",
+    "morgan": "~1.6.1",
+    "node-sass": "3.4.2",
+    "pm2": "1.0.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "css-loader":"0.23.1",
-    "sass-loader":"3.1.2",
-    "url-loader":"0.5.7",
-    "node-sass":"3.4.2",
-    "extract-text-webpack-plugin":"1.0.1",
-    "style-loader":"0.13.0",
-    "webpack": "^1.12.2",
+    "sass-loader": "3.1.2",
     "serve-favicon": "~2.3.0",
-    "pm2":"1.0.1",
-    "glob": "7.0.0"
+    "style-loader": "0.13.0",
+    "url-loader": "0.5.7",
+    "webpack": "^1.12.2"
   },
-  "devDependencies":{
+  "devDependencies": {
     "react-hot-loader": "1.3.0",
     "http-proxy": "1.13.2",
     "webpack-dev-server": "1.14.1"
   },
-  "bin":{
-    "pm2":"./node_modules/pm2/bin/pm2"
+  "bin": {
+    "pm2": "./node_modules/pm2/bin/pm2"
   },
-  "keywords":[
+  "keywords": [
     "react",
     "hot",
     "reload"
